# ai_rr

./: .gitignore  ai_rr.tex  algodemo.tex  chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap4_libsc.tex  chap4_wave_find_path.tex  chap5.tex  clean.bat  cppalgo.tex  libsc.tex  libscalgo.tex  libscprg.tex  main.tex  oii_intro.tex  onto.tex  ppvis_intro.tex  ppvis_rr_scp.docx  rakefile  scpalgo.tex  students_tasks.csv  tasks.csv  tasks_list.tex  titlepage.tex
data/1/: clean.bat  graph2.txt  graph3.txt  graph4.txt  stdafx.cpp  stdafx.h  wave_find_path.cpp  wave_find_path.sln  wave_find_path.vcproj
data/4/: CMakeLists.txt  graph1.txt  graph5.txt  wave_find_path.cpp
images/2/: Concept_Graph_structure.gwf  Directed_graph.gwf  Route_as_sequence.gwf  Route_as_subgraph.gwf  Test1_Out.gwf  Test5_In.gwf  Undirected_graph_Classical_method.gwf  Undirected_graph_Main_method.gwf  Undirected_graph_Short_form.gwf
images/3/: S10_Step_building_route_structure.gwf  S11_Step_building_route_structure_add_visits.gwf  S12_Step_building_route_structure.gwf  S13_Step_building_route_structure_add_visits.gwf  S14_Step_building_route_structure.gwf  S15_Step_building_route_structure_add_visits.gwf  S16_Erase_waves_list.gwf  S17_Result.gwf  S1_Input_graph.gwf  S2_Create_unchecked_vertexes_set.gwf  S3_Create_1st_wave.gwf  S4_Create_next_wave.gwf  S5_Create_next_wave.gwf  S6_Create_last_wave.gwf  S7_Erase_unchecked_vertexes_set.gwf  S8_Create_route_tuple.gwf  S9_Add_begin_and_end_vertexes_visit_to_route_tuple.gwf  (+3 more)
utils/: clean.bat  gen_students_tasks.rb  gen_tasks_list.rb  tasks_db.rb
(+169 files in other folders)
